2010-01-12  Jungshik Shin  <jshin@chromium.org>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=31597

        Make ICU's text breakiterator and string search use Chrome's UI
        language instead of 'en-US' or the OS UI language.

        As long as the webkit layout tests are run in en-US locale, there'd be
        no visible change.

        * platform/text/chromium/TextBreakIteratorInternalICUChromium.cpp:
        (UILanguage):
        (WebCore::currentSearchLocaleID):
        (WebCore::currentTextBreakLocaleID):

git-svn-id: svn://svn.chromium.org/blink/trunk@53159 bbb929c8-8fbe-4397-9dbb-9b2b20218538