third_party/WebKit/WebCore/platform/text/chromium/TextBreakIteratorInternalICUChromium.cpp
@@ -23,18 +23,29 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "TextBreakIteratorInternalICU.h"
 
+#include "CString.h"
+#include "Language.h"
+#include "PlatformString.h"
+#include <wtf/StdLibExtras.h>
+
 namespace WebCore {
+
+static const char* UILanguage()
+{
+    // Chrome's UI language can be different from the OS UI language on Windows.
+    // We want to return Chrome's UI language here.
+    DEFINE_STATIC_LOCAL(CString, locale, (defaultLanguage().latin1()));
+    return locale.data();
+}
 
 const char* currentSearchLocaleID()
 {
-    // FIXME: Should use system locale.
-    return "";
+    return UILanguage();
 }
 
 const char* currentTextBreakLocaleID()
 {
-    // FIXME: Should use system locale.
-    return "en_us";
+    return UILanguage();
 }
 
 } // namespace WebCore
